homepage news spacing issue

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -282,10 +282,10 @@ body.front {
 }
 
 .jcarousel .views-field-field-image:hover {
-	margin-bottom:-96px;
+	margin-bottom:-69px;
 }
 .jcarousel .views-field-body:hover {
-	margin-top:-96px;
+	margin-top:-69px;
 }
 
 .jcarousel .views-field-body {
